--- a/styles.css
+++ b/styles.css
@@ -5,47 +5,40 @@
 .cal{
     width: 400px;
     background-color: black;
-    color: white;
 }
 
 .display{
     color: white;
     text-align: right;
+    height: 100px;
+    font-size: 100px;
 }
-
 
 .buttons{
     
 }
 
-.row-1{
-    display: flex;
-}
-
-.row-2{
-    display: flex;
-}
-
-.row-3{
-    display: flex;
-}
-
-.row-4{
-    display: flex;
-}
-
-.row-5{
-    display: flex;
-}
-
 .x1-size{
-    width: 25%;
+    width: 24.25%;
+    height: 100px;
+    margin-bottom: 0.8%;
+    font-size: xx-large;    
 }
 
 .x2-size{
-    width: 50%;
+    width: 49.4%;
+    height: 100px;
+    margin-bottom: 0.8%;
+    font-size: xx-large;
 }
 
 .x3-size{
-    width: 75%;
+    width: 74.7%;
+    height: 100px;
+    margin-bottom: 0.8%;
+    font-size: xx-large;
+}
+
+.bottom-buttons{
+    margin-bottom: 0px;
 }
