--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .cal{
     width: 400px;
     background-color: black;
