--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 *{
     box-sizing: border-box;
+    background-color: black;
 }
 
 .cal{
+    height:100vh;
     width: 380px;
     background-color: black;
     border-radius: 2%;
@@ -11,6 +13,8 @@
 body{
     margin-top: 2px;
     margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,8 +23,8 @@ body{
 .display{
     color: white;
     text-align: right;
-    height: 100px;
-    font-size: 50px;
+    height: 20%;
+    font-size: 75px;
     padding-top: 22px;
     padding-right: 15px;
 }
@@ -31,7 +35,7 @@ body{
     margin-right: 2.5px;
     border-radius: 12%;
     width: 25%;
-    height: 100px;
+    height: 15vh;
     margin-bottom: 0.7%;
     font-size: xx-large;
 }
@@ -58,7 +62,7 @@ body{
 
 .x2-size{
     width: 50.7%;
-    height: 100px;
+    height: 15vh;
     margin-bottom: 0.7%;
     font-size: xx-large;
 }
