fix: disabling zoom for ios

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@
     background-color: black;
 }
 
-input {
-    font-size: 16px;
-  }  
+button {
+    touch-action: manipulation;
+}
 
 .cal{
     height:80vh;
