--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,12 @@
     width: 380px;
 }
 
+@media (min-width: 605px) {
+    .cal {
+    width: 500px;
+    }
+}
+
 body{
     margin-top: 2px;
     margin-left: 2px;
