--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,15 @@ body{
     padding-right: 15px;
 }
 
+/* for smaller devices */
+@media (min-width: 300px) and (max-width: 390px){
+
+    .display{
+        height: 125px;
+        padding-top: 40px;
+    }
+}
+
 /* for ipad in potrait view */
 @media (min-width: 605px) and (max-width: 1000px){
     
