--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,16 @@ body{
     padding-right: 15px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 820px) and (max-height: 480px) and (orientation: landscape){
+    
+    .display{
+        height: 100px;
+        padding-top: 20px;
+        font-size: 50px;
+        overflow: hidden;
+    }
+}
+
 /* for smaller devices */
 @media (min-width: 300px) and (max-width: 390px){
 
@@ -35,8 +45,8 @@ body{
     }
 }
 
-/* for ipad in potrait view */
-@media (min-width: 605px) and (max-width: 1000px){
+/* for ipad */
+@media (min-width: 605px) and (max-width: 1000px) and (min-height: 800px) and (max-height: 1200px) {
     
     .cal {
         width: 500px;
@@ -49,7 +59,7 @@ body{
 }
 
 /* for ipad pro */
-@media (min-width: 1024px) and (max-width: 1200px) and (min-height:900px) {
+@media (min-width: 1024px) and (max-width: 1200px) and (min-height:900px) and (max-height: 1400px) {
     
     .cal {
         width: 700px;
@@ -63,7 +73,7 @@ body{
 }
 
 /* for ipad pro landscape mode */
-@media (min-width: 1200px) and (max-width: 1400px){
+@media (min-width: 1200px) and (max-width: 1400px) and (min-height: 1024px) and (max-height: 1200px) {
     
     .cal {
         width: 500px;
