--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body{
     padding-right: 15px;
 }
 
+/* for mobile devices in landscape mode */
 @media screen and (min-width: 320px) and (max-width: 820px) and (max-height: 480px) and (orientation: landscape){
     
     .display{
