--- a/css/main.css
+++ b/css/main.css
@@ -83,15 +83,21 @@ body {
 }
 
 .button {
-    background-color: #e9e9e9;
+    /* background-color: #e9e9e9; */
+    background-color: #000000;
+    color: rgb(231, 226, 226);
     border: none;
     margin-right: 2.3px;
     border-radius: 15px;
     flex-basis: 25%;
-    height: 13vh;
+    height: 3em;
     margin-bottom: 2.5px;
     font-size: xx-large;
     touch-action: manipulation;
+}
+
+.hidden{
+    color: black;
 }
 
 .row1 {
@@ -124,24 +130,18 @@ body {
     margin-left: 2.5px;
 }
 
-.button:last-child {
-    background-color: #f3920b;
-    color: white;
+.button:last-child,
+.AC-button {
+    /* background-color: #f3920b; */
+    background-color: #000000;
+    color: #f3920b;
 }
 
-.button:hover, .button:focus {
+.button:hover {
     cursor: pointer;
-    background-color: #cfcfcf;
-}
-
-.button:last-child:hover,  .button:last-child:focus {
-    background-color: #dfb07e;
+    background-color: #2c2b2b;
 }
 
 .button:active {
-    background-color: #cfcfcf;
-}
-
-.button:last-child:active {
-    background-color: #dd8d37;
+    background-color: #272727;
 }
